[project]
name = "rustv"
version = "0.0.1-pre"
authors = ["Jared Roesch <roeschinc@gmail.com>"]

[lib]
name = "rustv"
path = "src/rustv/lib.rs"

[dependencies.docopt]
git = "https://github.com/burntsushi/docopt.rs"

[dependencies.docopt_macros]
git = "https://github.com/burntsushi/docopt.rs"

[dependencies.toml]
git = "https://github.com/alexcrichton/toml-rs"

[dependencies.http]
git = "https://github.com/chris-morgan/rust-http"

[dependencies.toolbelt]
git = "https://github.com/jroesch/toolbelt-rs"

[[bin]]
name = "rustv"
test = false
doc = false

[[bin]]
name = "rustv-build"
test = false
doc = false
